# cw-course

./: .gitignore
counting_contract/: Cargo.toml
counting_contract-0.2/: .gitignore  Cargo.toml
counting_contract-0.2/.cargo/: config
counting_contract-0.2/src/: contract.rs  error.rs  lib.rs  multitest.rs  state.rs
counting_contract-0.2/src/multitest/: tests.rs
counting_contract-0.3/: Cargo.toml
counting_contract-0.3/artifacts/: checksums.txt  counting_contract-aarch64.wasm
counting_contract-0.3/src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting_contract-0.3/src/multitest/: tests.rs
counting_contract/.cargo/: config
counting_contract/artifacts/: checksums_intermediate.txt
counting_contract/schema/: counting_contract.json
counting_contract/src/: contract.rs  lib.rs  msg.rs  multitest.rs  state.rs
counting_contract/src/multitest/: tests.rs
simple_contract/: Cargo.toml
simple_contract/src/: contract.rs  lib.rs  msg.rs
simple_contract/src/multitest/: contract.rs  tests.rs
