[package]
name = "counting_contract"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.1.2"
cw-storage-plus = "0.15.0"
cw2 = "0.15.0"
schemars = "0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.35"
cw-multi-test = { version = "0.15.0", optional = true }
cosmwasm-schema = "1.1.1"

[dev-dependencies]
counting_contract-0_1 = { path = "../counting_contract", package = "counting_contract", features = ["tests"] }
cw-multi-test = "0.15.0"

