[package]
name = "counting_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.15.1"
serde = "1.0.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
